--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
 
 #container{
     margin : 20px auto;
-    background-color: white;
+     background-color: green;
+  opacity: 0.6;
     height: 300px;
     width : 700px;
     border-radius: 5px;
