--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 
 #container{
     margin : 20px auto;
-     background-color: green;
+     background-color: white;
   opacity: 0.3;
     height: 300px;
     width : 700px;
